:fire: Remove deprecated constructor calls on primitive wrappers in the test code